--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<h1>To-Do list app <i class="fa fa-plus"></i></h1>	
 	<input type="text" placeholder="Add New To-Do">
 	<ul>
-	<li><span><i class="fa fa-trash"></i></span> Got to class</li>
-	<li><span><i class="fa fa-trash"></i></span> Got to class</li>
-	<li><span><i class="fa fa-trash"></i></span> Got to class</li>
+	<li><span><i class="fa fa-trash"></i></span> Read some books</li>
+	<li><span><i class="fa fa-trash"></i></span> Learn to code</li>
+	<li><span><i class="fa fa-trash"></i></span> Get a job</li>
 		
 	
 	
